Finish structure super-simple-website

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,2 +1,8 @@
-@import '_component/layout/general';
-@import '_component/intro/intro';
+@import '_component/front-page/front-page';
+@import '_component/catalog/catalog';
+@import '_component/contact/contact';
+@import '_component/font/icon-font';
+@import '_component/config/reset';
+
+// au aparut?
+// npm run deploy
