--- a/src/index.pug
+++ b/src/index.pug
@@ -1,16 +1,7 @@
-doctype html
-html(lang="en")
-  head
-    title Welcome to Pug Starter
-    meta(content="Simple pug (jade) starter aimed to quickly deliver HTML & CSS projects" name="description")
-    //- this checks to see the the "embed" property is set to "true"
-    //- in the package.json file
-    if config.entry.css.embed
-      link(rel="stylesheet" href=`${embedPath}` embed)
-  body
-    .content
-      include _component/intro/intro
-    //- The style.css is at the bottom so it doesn't
-    //- block the loading of assets
-    if config.entry.css.external
-      link(rel="stylesheet", href=`${baseUrl}style.css`)
+extends _component/layout/page.pug
+block configuration
+
+block content
+  include _component/front-page/front-page
+  include _component/catalog/catalog
+  include _component/contact/contact
