--- a/src/_component/contact/contact.scss
+++ b/src/_component/contact/contact.scss
@@ -1,3 +1,9 @@
 .table-icon{
-text-align: center;
+    padding: 2rem;
+    font-size: 3rem;
+    margin-left: 15rem;
+    display:inline-flex;
+}
+.table-icon-font-item{
+padding:1rem;
 }
